# nexus-toolkit

./: .env.example  .gitignore  AGENTS_GUIDE.md  ANALYSIS.md  CHANGELOG.md  LICENSE  N8N_WORKFLOW_ANALYSIS.md  README.md  TODO.md  VERIFICATION.md  nexus_cli.py  nexus_server.py  pyproject.toml  test_manual.py  test_mcp_connection.sh  wrangler.toml
.claude/agents/: backend-api.md  code-reviewer.md  database.md  deployment.md  frontend-ui.md  full-stack-flutter.md  full-stack-rn.md  fullstack-nextjs.md  monitoring.md  monorepo.md  nextjs-fullstack.md  nextjs-static.md  nexus-validator.md  performance.md  product-manager.md  qa-tester.md  react-native.md  savant-flutter.md  savant-fullstack-js.md  savant-java-spring.md  savant-react-native.md  security.md  software-architect.md  solution-architect.md  solution-designer.md  t3-stack.md  task-planner.md  tech-writer.md  test-planner.md  vite-spa.md
.claude/guides/golden-paths/: ADDING_GOLDEN_PATHS.md  GOLDEN_PATHS.md  GOLDEN_PATH_GUIDE.md  MAINTENANCE.md  golden-path-spec-v2.md
.github/workflows/: publish.yml
docs/: PUBLISHING.md  devsecops-ds-workflows.md
golden_paths/full-stack-flutter/: manifest.json
golden_paths/full-stack-flutter/reference/: .gitignore  Makefile  README.md  docker-compose.yml  package.json
golden_paths/full-stack-rn/: manifest.json
golden_paths/full-stack-rn/reference/: .gitignore  README.md  package.json  turbo.json
golden_paths/monorepo/: manifest.json
golden_paths/nextjs-fullstack/: manifest.json
golden_paths/nextjs-static/: manifest.json
golden_paths/t3-stack/: manifest.json
golden_paths/vite-spa/: manifest.json
public/: docs.html  index.html  install.sh
scripts/: deploy-all.sh  gen_test_zip.py  test-pipeline.sh
tests/: __init__.py  test_agent_runner.py  test_figma_pipeline.py  test_improvements.py  test_mcp_protocol.py  test_memory.py  test_nexus_server.py
tools/: __init__.py  search.py
tools/agents/: nextjs-fullstack.md  t3-stack.md  vite-spa.md
tools/devsecops/: __init__.py  agent_runner.py  memory.py
tools/figma/: __init__.py  codebase_ingest.py  filetree.py  ingest.py  package.py  prompt_ingest.py  remap.py  validate.py
(+162 files in other folders)
